--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   },
   "homepage": "https://github.com/sirius2k/voca-printing#readme",
   "dependencies": {
+    "connect-history-api-fallback": "^1.6.0",
+    "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
+    "lodash": "^4.17.20",
     "morgan": "^1.10.0"
   }
 }
