--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "voca-printing-frontend",
   "version": "1.0.0",
-  "description": "Simple frontend project for the voca-printing",
+  "description": "A simple frontend project for Voca Printing",
   "author": "Kyoungwook Park",
   "private": true,
   "scripts": {
@@ -14,7 +14,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "vue": "^2.5.2",
+    "bootstrap": "^4.5.2",
+    "bootstrap-vue": "^2.17.3",
+    "vue": "^2.6.12",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
