--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,9 @@
   "dependencies": {
     "bootstrap": "^4.5.2",
     "bootstrap-vue": "^2.17.3",
+    "fitty": "^2.3.3",
     "vue": "^2.6.12",
+    "vue-resize-text": "^0.1.1",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
